<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/distance_converter"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/enterDist"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_value"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="30sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/km2mi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kilometers_to_miles"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/mi2km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miles_to_kilometer"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/calc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:textSize="25sp" />

</LinearLayout>