<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_converter"
        android:textSize="35sp"
        android:textColor="#ffff"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/enterTemp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint= "@string/enter_temperature"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:importantForAutofill="no" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/C2F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsius_to_fahrenheit"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/F2C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_to_celsius"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/convert"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_degrees"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="30dp"
        android:textSize="25sp" />

</LinearLayout>